add v1 home images

--- a/docs/assets/css/tailwind-output.css
+++ b/docs/assets/css/tailwind-output.css
@@ -106,6 +106,40 @@
   --tw-contain-style:
 }
 
+.container {
+  width: 100%
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px
+  }
+}
+
 .block {
   display: block
 }
@@ -116,8 +150,4 @@
 
 .bg-cover {
   background-size: cover
-}
-
-.bg-no-repeat {
-  background-repeat: no-repeat
 }
