--- a/docs/assets/css/tailwind-output.css
+++ b/docs/assets/css/tailwind-output.css
@@ -243,6 +243,24 @@
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
 }
 
+#hero::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  /* Position the strip in the middle of the hero div */
+  left: 0;
+  width: 100%;
+  height: 40%;
+  /* Adjust this to change the thickness of the strip */
+  background-color: rgba(0, 0, 0, 0.5);
+  /* Semi-transparent black */
+  z-index: -1;
+  transform: translateY(-50%);
+  /* This centers the strip vertically */
+  border-radius: 30px;
+  /* Add rounded corners */
+}
+
 .hover\:bg-blue-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity))
