--- a/material/overrides/assets/css/tailwind.css
+++ b/material/overrides/assets/css/tailwind.css
@@ -1,3 +1,16 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+#hero::before {
+    content: "";
+    position: absolute;
+    top: 50%; /* Position the strip in the middle of the hero div */
+    left: 0;
+    width: 100%;
+    height: 40%; /* Adjust this to change the thickness of the strip */
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+    z-index: -1;
+    transform: translateY(-50%); /* This centers the strip vertically */
+    border-radius: 30px; /* Add rounded corners */
+}
