--- a/docs/assets/css/tailwind-output.css
+++ b/docs/assets/css/tailwind-output.css
@@ -106,6 +106,40 @@
   --tw-contain-style:
 }
 
+.container {
+  width: 100%
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px
+  }
+}
+
 .absolute {
   position: absolute
 }
@@ -122,9 +156,18 @@
   z-index: -1
 }
 
+.-mx-4 {
+  margin-left: -1rem;
+  margin-right: -1rem
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto
+}
+
+.mb-12 {
+  margin-bottom: 3rem
 }
 
 .mb-4 {
@@ -133,6 +176,10 @@
 
 .mb-5 {
   margin-bottom: 1.25rem
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem
 }
 
 .mb-8 {
@@ -171,12 +218,20 @@
   height: 100vh
 }
 
+.w-full {
+  width: 100%
+}
+
 .w-screen {
   width: 100vw
 }
 
 .max-w-screen-xl {
   max-width: 1280px
+}
+
+.grow {
+  flex-grow: 1
 }
 
 .scale-125 {
@@ -220,9 +275,19 @@
   padding-right: 1rem
 }
 
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem
+}
+
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem
 }
 
 .py-8 {
@@ -232,6 +297,11 @@
 
 .text-center {
   text-align: center
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem
 }
 
 .text-4xl {
@@ -268,6 +338,10 @@
   line-height: 1
 }
 
+.leading-relaxed {
+  line-height: 1.625
+}
+
 .tracking-tight {
   letter-spacing: -0.025em
 }
@@ -280,6 +354,16 @@
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity))
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity))
+}
+
+.text-gray-800 {
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity))
 }
 
 .text-gray-900 {
@@ -326,14 +410,13 @@
   background-color: rgb(29 78 216 / var(--tw-bg-opacity))
 }
 
-.hover\:text-gray-800:hover {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity))
-}
-
 @media (min-width: 640px) {
-  .sm\:justify-between {
-    justify-content: space-between
+  .sm\:flex-row {
+    flex-direction: row
+  }
+
+  .sm\:justify-center {
+    justify-content: center
   }
 
   .sm\:px-16 {
@@ -356,6 +439,10 @@
 @media (min-width: 1024px) {
   .lg\:mb-0 {
     margin-bottom: 0px
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%
   }
 
   .lg\:max-w-screen-lg {
@@ -409,10 +496,5 @@
   .dark\:text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity))
-  }
-
-  .dark\:hover\:text-gray-400:hover {
-    --tw-text-opacity: 1;
-    color: rgb(156 163 175 / var(--tw-text-opacity))
   }
 }
