--- a/material/overrides/assets/css/tailwind.css
+++ b/material/overrides/assets/css/tailwind.css
@@ -5,14 +5,12 @@
 #hero::before {
     content: "";
     position: absolute;
-    top: 50%; /* Position the strip in the middle of the hero div */
+    top: 0;
     left: 0;
     width: 100%;
-    height: 40%; /* Adjust this to change the thickness of the strip */
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+    height: 100%; /* Make it cover the entire #hero div */
+    background-color: rgba(0, 0, 0, 0.4); /* Semi-transparent black */
     z-index: -1;
-    transform: translateY(-50%); /* This centers the strip vertically */
-    border-radius: 30px; /* Add rounded corners */
 }
 
 .featured-in {
