--- a/docs/assets/css/tailwind-output.css
+++ b/docs/assets/css/tailwind-output.css
@@ -178,40 +178,6 @@
   --tw-contain-style:  ;
 }
 
-.container {
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
 .sr-only {
   position: absolute;
   width: 1px;
@@ -244,34 +210,21 @@
   z-index: 1;
 }
 
-.-mx-4 {
-  margin-left: -1rem;
-  margin-right: -1rem;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
+.-mb-\[--card-padding\] {
+  margin-bottom: calc(var(--card-padding) * -1);
 }
 
-.mb-5 {
-  margin-bottom: 1.25rem;
+.mt-12 {
+  margin-top: 3rem;
 }
 
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
-.mr-5 {
-  margin-right: 1.25rem;
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .mt-6 {
@@ -290,8 +243,31 @@
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
+}
+
+.aspect-video {
+  aspect-ratio: 16 / 9;
+}
+
+.size-10 {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.size-12 {
+  width: 3rem;
+  height: 3rem;
+}
+
+.size-16 {
+  width: 4rem;
+  height: 4rem;
 }
 
 .size-4 {
@@ -304,16 +280,21 @@
   height: 1.25rem;
 }
 
+.size-8 {
+  width: 2rem;
+  height: 2rem;
+}
+
 .h-11 {
   height: 2.75rem;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
 .h-\[1\.5px\] {
   height: 1.5px;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .h-screen {
@@ -326,6 +307,10 @@
 
 .w-2\.5 {
   width: 0.625rem;
+}
+
+.w-\[calc\(100\%-3\.25rem\)\] {
+  width: calc(100% - 3.25rem);
 }
 
 .w-fit {
@@ -345,12 +330,12 @@
   max-width: 42rem;
 }
 
-.max-w-screen-xl {
-  max-width: 1280px;
+.max-w-6xl {
+  max-width: 72rem;
 }
 
-.grow {
-  flex-grow: 1;
+.max-w-lg {
+  max-width: 32rem;
 }
 
 .origin-left {
@@ -364,6 +349,11 @@
 
 .-translate-x-px {
   --tw-translate-x: -1px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -399,6 +389,10 @@
   align-items: center;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
 }
@@ -419,6 +413,10 @@
   gap: 0.5rem;
 }
 
+.gap-3 {
+  gap: 0.75rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -433,8 +431,18 @@
   margin-left: calc(-0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
 .overflow-auto {
   overflow: auto;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .text-wrap {
@@ -453,8 +461,16 @@
   border-radius: var(--annonce-border-radius);
 }
 
+.rounded-\[--avatar-border-radius\] {
+  border-radius: var(--avatar-border-radius);
+}
+
 .rounded-\[--btn-border-radius\] {
   border-radius: var(--btn-border-radius);
+}
+
+.rounded-\[--card-border-radius\] {
+  border-radius: var(--card-border-radius);
 }
 
 .rounded-\[calc\(var\(--annonce-border-radius\)-0\.375rem\)\] {
@@ -465,17 +481,63 @@
   border-radius: calc(var(--btn-border-radius) + 4px);
 }
 
+.rounded-\[calc\(var\(--card-border-radius\)\/2\)\] {
+  border-radius: calc(var(--card-border-radius) / 2);
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded-b-\[--card-border-radius\] {
+  border-bottom-right-radius: var(--card-border-radius);
+  border-bottom-left-radius: var(--card-border-radius);
+}
+
 .border {
   border-width: 1px;
+}
+
+.border-t {
+  border-top-width: 1px;
 }
 
 .border-\[--ui-light-border-color\] {
   border-color: var(--ui-light-border-color);
 }
 
+.border-danger-500\/10 {
+  border-color: rgb(239 68 68 / 0.1);
+}
+
+.border-gray-500\/10 {
+  border-color: rgb(110 125 132 / 0.1);
+}
+
+.border-gray-950\/5 {
+  border-color: rgb(2 3 4 / 0.05);
+}
+
+.border-info-500\/10 {
+  border-color: rgb(59 130 246 / 0.1);
+}
+
 .border-primary-600 {
   --tw-border-opacity: 1;
   border-color: rgb(22 163 74 / var(--tw-border-opacity));
+}
+
+.border-success-500\/10 {
+  border-color: rgb(132 204 22 / 0.1);
+}
+
+.border-warning-500\/10 {
+  border-color: rgb(234 179 8 / 0.1);
+}
+
+.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 239 242 / var(--tw-bg-opacity));
 }
 
 .bg-gray-950 {
@@ -502,8 +564,55 @@
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.from-danger-500 {
+  --tw-gradient-from: #ef4444 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(239 68 68 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-gray-500 {
+  --tw-gradient-from: #6E7D84 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(110 125 132 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-info-500 {
+  --tw-gradient-from: #3b82f6 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(59 130 246 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-success-500 {
+  --tw-gradient-from: #84cc16 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(132 204 22 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-warning-500 {
+  --tw-gradient-from: #eab308 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(234 179 8 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-white {
+  --tw-gradient-to: #fff var(--tw-gradient-to-position);
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .p-1 {
   padding: 0.25rem;
+}
+
+.p-\[--card-padding\] {
+  padding: var(--card-padding);
 }
 
 .px-2 {
@@ -516,9 +625,9 @@
   padding-right: 1rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .py-0 {
@@ -531,14 +640,31 @@
   padding-bottom: 0.125rem;
 }
 
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+.py-36 {
+  padding-top: 9rem;
+  padding-bottom: 9rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.pb-36 {
+  padding-bottom: 9rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
+.pt-36 {
+  padding-top: 9rem;
 }
 
 .text-center {
@@ -570,33 +696,21 @@
   line-height: 1.25rem;
 }
 
-.font-bold {
-  font-weight: 700;
-}
-
 .font-medium {
   font-weight: 500;
-}
-
-.font-normal {
-  font-weight: 400;
 }
 
 .font-semibold {
   font-weight: 600;
 }
 
-.uppercase {
-  text-transform: uppercase;
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 
-.leading-relaxed {
-  line-height: 1.625;
-}
-
-.text-gray-400 {
+.text-\[\#000014\] {
   --tw-text-opacity: 1;
-  color: rgb(153 168 175 / var(--tw-text-opacity));
+  color: rgb(0 0 20 / var(--tw-text-opacity));
 }
 
 .text-gray-500 {
@@ -612,11 +726,6 @@
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(56 72 80 / var(--tw-text-opacity));
-}
-
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(33 44 52 / var(--tw-text-opacity));
 }
 
 .text-gray-950 {
@@ -637,6 +746,16 @@
   opacity: 0.2;
 }
 
+.opacity-25 {
+  opacity: 0.25;
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -646,6 +765,15 @@
 .shadow-primary-200 {
   --tw-shadow-color: #bbf7d0;
   --tw-shadow: var(--tw-shadow-colored);
+}
+
+.blur-2xl {
+  --tw-blur: blur(40px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition {
@@ -683,9 +811,48 @@
   z-index: -1;
 }
 
-.featured-in {
-  height: 50vh;
-  /* This will make the element 50% of the viewport's height */
+.swiper-pagination-bullet {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(228 235 242 / var(--tw-bg-opacity)) !important;
+  opacity: 1 !important;
+}
+
+@media (prefers-color-scheme: dark) {
+  .swiper-pagination-bullet {
+    --tw-bg-opacity: 1 !important;
+    background-color: rgb(56 72 80 / var(--tw-bg-opacity)) !important;
+  }
+}
+
+.swiper-pagination-bullet-active {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(2 3 4 / var(--tw-bg-opacity)) !important;
+}
+
+@media (prefers-color-scheme: dark) {
+  .swiper-pagination-bullet-active {
+    --tw-bg-opacity: 1 !important;
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
+  }
+}
+
+@keyframes loop {
+  to {
+    offset-distance: 100%;
+  }
+}
+
+.\*\:relative > * {
+  position: relative;
+}
+
+.\*\:m-auto > * {
+  margin: auto;
+}
+
+.\*\:size-6 > * {
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 .\*\:select-none > * {
@@ -704,6 +871,11 @@
   inset: 0px;
 }
 
+.before\:rounded-\[calc\(\(var\(--card-border-radius\)\/2\)-1px\)\]::before {
+  content: var(--tw-content);
+  border-radius: calc((var(--card-border-radius) / 2) - 1px);
+}
+
 .before\:rounded-\[calc\(var\(--btn-border-radius\)-1px\)\]::before {
   content: var(--tw-content);
   border-radius: calc(var(--btn-border-radius) - 1px);
@@ -714,15 +886,47 @@
   border-width: 1px;
 }
 
+.before\:border-t::before {
+  content: var(--tw-content);
+  border-top-width: 1px;
+}
+
 .before\:border-primary-500::before {
   content: var(--tw-content);
   --tw-border-opacity: 1;
   border-color: rgb(34 197 94 / var(--tw-border-opacity));
 }
 
+.before\:border-white::before {
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .before\:bg-gradient-to-b::before {
   content: var(--tw-content);
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+}
+
+.before\:from-danger-100::before {
+  content: var(--tw-content);
+  --tw-gradient-from: #fee2e2 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(254 226 226 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.before\:from-gray-100::before {
+  content: var(--tw-content);
+  --tw-gradient-from: #EEEFF2 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(238 239 242 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.before\:from-info-100::before {
+  content: var(--tw-content);
+  --tw-gradient-from: #dbeafe var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(219 234 254 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .before\:from-primary-600::before {
@@ -732,8 +936,33 @@
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.before\:from-success-100::before {
+  content: var(--tw-content);
+  --tw-gradient-from: #ecfccb var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(236 252 203 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.before\:from-warning-100::before {
+  content: var(--tw-content);
+  --tw-gradient-from: #fef9c3 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(254 249 195 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.before\:shadow::before {
+  content: var(--tw-content);
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .hover\:border-\[--ui-light-border-hover-color\]:hover {
   border-color: var(--ui-light-border-hover-color);
+}
+
+.hover\:bg-gray-200\/75:hover {
+  background-color: rgb(228 235 242 / 0.75);
 }
 
 .hover\:bg-primary-600:hover {
@@ -741,9 +970,18 @@
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
+.active\:bg-gray-100:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 239 242 / var(--tw-bg-opacity));
+}
+
 .active\:bg-primary-700:active {
   --tw-bg-opacity: 1;
   background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+}
+
+.disabled\:border:disabled {
+  border-width: 1px;
 }
 
 .disabled\:border-gray-200:disabled {
@@ -754,6 +992,11 @@
 .disabled\:bg-gray-100:disabled {
   --tw-bg-opacity: 1;
   background-color: rgb(238 239 242 / var(--tw-bg-opacity));
+}
+
+.disabled\:text-gray-950:disabled {
+  --tw-text-opacity: 1;
+  color: rgb(2 3 4 / var(--tw-text-opacity));
 }
 
 .disabled\:text-gray-950\/40:disabled {
@@ -792,6 +1035,11 @@
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.group:hover .group-hover\:-translate-y-1\/4 {
+  --tw-translate-y: -25%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .group:hover .group-hover\:translate-x-px {
   --tw-translate-x: 1px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -820,25 +1068,12 @@
     width: 83.333333%;
   }
 
-  .sm\:flex-row {
-    flex-direction: row;
-  }
-
-  .sm\:justify-center {
-    justify-content: center;
-  }
-
-  .sm\:px-16 {
-    padding-left: 4rem;
-    padding-right: 4rem;
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
 @media (min-width: 768px) {
-  .md\:max-w-screen-md {
-    max-width: 768px;
-  }
-
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -846,10 +1081,6 @@
 }
 
 @media (min-width: 1024px) {
-  .lg\:mb-0 {
-    margin-bottom: 0px;
-  }
-
   .lg\:mr-auto {
     margin-right: auto;
   }
@@ -858,16 +1089,12 @@
     margin-top: 0px;
   }
 
-  .lg\:w-1\/2 {
-    width: 50%;
-  }
-
   .lg\:w-4\/5 {
     width: 80%;
   }
 
-  .lg\:max-w-screen-lg {
-    max-width: 1024px;
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:px-12 {
@@ -875,28 +1102,13 @@
     padding-right: 3rem;
   }
 
-  .lg\:px-36 {
-    padding-left: 9rem;
-    padding-right: 9rem;
-  }
-
   .lg\:py-16 {
     padding-top: 4rem;
     padding-bottom: 4rem;
   }
-
-  .lg\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
 }
 
 @media (min-width: 1280px) {
-  .xl\:px-48 {
-    padding-left: 12rem;
-    padding-right: 12rem;
-  }
-
   .xl\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -920,6 +1132,22 @@
     border-color: rgb(255 255 255 / 0.1);
   }
 
+  .dark\:border-white\/15 {
+    border-color: rgb(255 255 255 / 0.15);
+  }
+
+  .dark\:border-white\/5 {
+    border-color: rgb(255 255 255 / 0.05);
+  }
+
+  .dark\:bg-\[--card-dark-bg\] {
+    background-color: var(--card-dark-bg);
+  }
+
+  .dark\:bg-gray-500\/10 {
+    background-color: rgb(110 125 132 / 0.1);
+  }
+
   .dark\:bg-gray-900 {
     --tw-bg-opacity: 1;
     background-color: rgb(16 22 27 / var(--tw-bg-opacity));
@@ -939,6 +1167,16 @@
     background-color: rgb(255 255 255 / 0.05);
   }
 
+  .dark\:from-white {
+    --tw-gradient-from: #fff var(--tw-gradient-from-position);
+    --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  }
+
+  .dark\:to-white {
+    --tw-gradient-to: #fff var(--tw-gradient-to-position);
+  }
+
   .dark\:text-gray-300 {
     --tw-text-opacity: 1;
     color: rgb(193 208 213 / var(--tw-text-opacity));
@@ -952,6 +1190,10 @@
   .dark\:text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .dark\:opacity-0 {
+    opacity: 0;
   }
 
   .dark\:opacity-50 {
@@ -979,11 +1221,34 @@
     border-color: rgb(74 222 128 / var(--tw-border-opacity));
   }
 
+  .dark\:before\:border-white\/20::before {
+    content: var(--tw-content);
+    border-color: rgb(255 255 255 / 0.2);
+  }
+
+  .dark\:before\:from-white\/10::before {
+    content: var(--tw-content);
+    --tw-gradient-from: rgb(255 255 255 / 0.1) var(--tw-gradient-from-position);
+    --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  }
+
+  .dark\:before\:to-transparent::before {
+    content: var(--tw-content);
+    --tw-gradient-to: transparent var(--tw-gradient-to-position);
+  }
+
   .dark\:before\:shadow-inner::before {
     content: var(--tw-content);
     --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
     --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+
+  .dark\:before\:shadow-gray-950::before {
+    content: var(--tw-content);
+    --tw-shadow-color: #020304;
+    --tw-shadow: var(--tw-shadow-colored);
   }
 
   .dark\:before\:shadow-white\/10::before {
@@ -996,9 +1261,17 @@
     border-color: var(--ui-dark-border-hover-color);
   }
 
+  .dark\:hover\:bg-gray-500\/15:hover {
+    background-color: rgb(110 125 132 / 0.15);
+  }
+
   .dark\:hover\:bg-primary-700:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+  }
+
+  .dark\:active\:bg-gray-500\/10:active {
+    background-color: rgb(110 125 132 / 0.1);
   }
 
   .dark\:active\:bg-primary-800:active {
@@ -1054,6 +1327,10 @@
     --tw-shadow: 0 0 #0000;
     --tw-shadow-colored: 0 0 #0000;
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+
+  .group:hover .dark\:group-hover\:opacity-5 {
+    opacity: 0.05;
   }
 }
 
