--- a/material/overrides/assets/css/tailwind.css
+++ b/material/overrides/assets/css/tailwind.css
@@ -13,6 +13,16 @@
     z-index: -1;
 }
 
-.featured-in {
-    height: 50vh; /* This will make the element 50% of the viewport's height */
+.swiper-pagination-bullet{
+    @apply !bg-gray-200 dark:!bg-gray-700 !opacity-100;
+}
+
+.swiper-pagination-bullet-active{
+    @apply !bg-gray-950 dark:!bg-white;
+}
+
+@keyframes loop {
+    to {
+        offset-distance: 100%;
+    }
 }
